{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 16,
  "lineage": "22ac7b71-b6fd-8c16-f66b-64a4488556a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:774258447545:instance/i-0a08046805f891761",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a08046805f891761",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "sumit",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02169bb7c72d0b172",
            "private_dns": "ip-10-0-1-4.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-13-234-232-179.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.232.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bee3a474abcec0a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020eac6cd93148245",
            "tags": {
              "Name": "master-node",
              "Role": "Jenkins-Ansible-SonarQube"
            },
            "tags_all": {
              "Name": "master-node",
              "Role": "Jenkins-Ansible-SonarQube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ff55fe8f6c6df7e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:774258447545:instance/i-07802fa809e53d75b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07802fa809e53d75b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "sumit",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd2a7f97c40d4f0e",
            "private_dns": "ip-10-0-1-155.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-13-200-251-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.251.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fefb74563253c57a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020eac6cd93148245",
            "tags": {
              "Name": "worker-node",
              "Role": "Application"
            },
            "tags_all": {
              "Name": "worker-node",
              "Role": "Application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0921da690514412"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_security_group.worker_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774258447545:internet-gateway/igw-04b0af2dff0ff4046",
            "id": "igw-04b0af2dff0ff4046",
            "owner_id": "774258447545",
            "tags": {
              "Name": "boardgame-igw"
            },
            "tags_all": {
              "Name": "boardgame-igw"
            },
            "vpc_id": "vpc-036b8be0e66c8cc7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774258447545:route-table/rtb-023fcd57718bd29ec",
            "id": "rtb-023fcd57718bd29ec",
            "owner_id": "774258447545",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b0af2dff0ff4046",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "boardgame-public-rt"
            },
            "tags_all": {
              "Name": "boardgame-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b8be0e66c8cc7d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a72ca568b82e37b",
            "route_table_id": "rtb-023fcd57718bd29ec",
            "subnet_id": "subnet-020eac6cd93148245"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774258447545:security-group/sg-04ff55fe8f6c6df7e",
            "description": "Security group for Master Node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ff55fe8f6c6df7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Jenkins UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SonarQube UI",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "master-sg",
            "name_prefix": "",
            "owner_id": "774258447545",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "master-sg"
            },
            "tags_all": {
              "Name": "master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b8be0e66c8cc7d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774258447545:security-group/sg-0a0921da690514412",
            "description": "Security group for Worker Node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0921da690514412",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow app port from Master SG",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ff55fe8f6c6df7e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "worker-sg",
            "name_prefix": "",
            "owner_id": "774258447545",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker-sg"
            },
            "tags_all": {
              "Name": "worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b8be0e66c8cc7d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774258447545:subnet/subnet-020eac6cd93148245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020eac6cd93148245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774258447545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boardgame-public-subnet"
            },
            "tags_all": {
              "Name": "boardgame-public-subnet"
            },
            "vpc_id": "vpc-036b8be0e66c8cc7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774258447545:vpc/vpc-036b8be0e66c8cc7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb506be5660ab410",
            "default_route_table_id": "rtb-0f9d5c3d7576663e5",
            "default_security_group_id": "sg-0316a920e4cd722a2",
            "dhcp_options_id": "dopt-0b506ebf6c45ee324",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036b8be0e66c8cc7d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9d5c3d7576663e5",
            "owner_id": "774258447545",
            "tags": {
              "Name": "boardgame-vpc"
            },
            "tags_all": {
              "Name": "boardgame-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}